--- a/learningOutcomes/iterativeDesign/iterative.html
+++ b/learningOutcomes/iterativeDesign/iterative.html
@@ -87,66 +87,51 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <div class="carousel-image-container">
-                                <img src="../../images/Home.jpg" alt="Step 1" class="preview-image"
-                                    data-full="../../images/Home.jpg">
-                                <img src="../../images/Home Mobile.jpg" alt="Step 1" class="preview-image"
-                                    data-full="../../images/Home Mobile.jpg">
+                                <img src="../../images/Home.jpg" alt="Step 1" class="preview-image" data-full="../../images/Home.jpg">
+                                <img src="../../images/Home Mobile.jpg" alt="Step 1" class="preview-image" data-full="../../images/Home Mobile.jpg">
                             </div>
                             <p class="carousel-text">Step #1: Initial Wireframe Creation</p>
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-image-container">
-                                <img src="../../images/Landing Page.jpg" alt="Step 2" class="preview-image"
-                                    data-full="../../images/Landing Page.jpg">
-                                <img src="../../images/Services.jpg" alt="Step 2" class="preview-image"
-                                    data-full="../../images/Services.jpg">
-                                <img src="../../images/Partners.jpg" alt="Step 2" class="preview-image"
-                                    data-full="../../images/Partners.jpg">
+                                <img src="../../images/Landing Page.jpg" alt="Step 2" class="preview-image" data-full="../../images/Landing Page.jpg">
+                                <img src="../../images/Services.jpg" alt="Step 2" class="preview-image" data-full="../../images/Services.jpg">
+                                <img src="../../images/Partners.jpg" alt="Step 2" class="preview-image" data-full="../../images/Partners.jpg">
                             </div>
                             <p class="carousel-text">Step #3: Feedback Analysis</p>
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-image-container">
-                                <img src="../../images/Landing Page Mockup.jpg" alt="Step 3" class="preview-image"
-                                    data-full="../../images/Landing Page Mockup.jpg">
+                                <img src="../../images/Landing Page Mockup.jpg" alt="Step 3" class="preview-image" data-full="../../images/Landing Page Mockup.jpg">
                             </div>
                             <p class="carousel-text">Step #4: Mock-up 1</p>
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-image-container">
-                                <img src="../../images/Landing Page Mockup Iteration 1.jpg" alt="Step 4"
-                                    class="preview-image" data-full="../../images/Landing Page Mockup Iteration 1.jpg">
-                                <img src="../../images/Services Mockup.jpg" alt="Step 4" class="preview-image"
-                                    data-full="../../images/Services Mockup.jpg">
+                                <img src="../../images/Landing Page Mockup Iteration 1.jpg" alt="Step 4" class="preview-image" data-full="../../images/Landing Page Mockup Iteration 1.jpg">
+                                <img src="../../images/Services Mockup.jpg" alt="Step 4" class="preview-image" data-full="../../images/Services Mockup.jpg">
                             </div>
                             <p class="carousel-text">Step #7: Iteration 2</p>
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-image-container">
-                                <img src="../../images/Landing Page Mockup Iteration 2.jpg" alt="Step 4"
-                                    class="preview-image" data-full="../../images/Landing Page Mockup Iteration 2.jpg">
-                                <img src="../../images/Services Mockup Iteration 2.jpg" alt="Step 4"
-                                    class="preview-image" data-full="../../images/Services Mockup Iteration 2.jpg">
+                                <img src="../../images/Landing Page Mockup Iteration 2.jpg" alt="Step 4" class="preview-image" data-full="../../images/Landing Page Mockup Iteration 2.jpg">
+                                <img src="../../images/Services Mockup Iteration 2.jpg" alt="Step 4" class="preview-image" data-full="../../images/Services Mockup Iteration 2.jpg">
                             </div>
                             <p class="carousel-text">Step #8: Third Round of Feedback</p>
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-image-container">
-                                <img src="../../images/Landing Page Mockup Iteration 3.jpg" alt="Step 5"
-                                    class="preview-image" data-full="../../images/Landing Page Mockup Iteration 3.jpg">
-                                <img src="../../images/Services Mockup Iteration 3.jpg" alt="Step 5"
-                                    class="preview-image" data-full="../../images/Services Mockup Iteration 3.jpg">
+                                <img src="../../images/Landing Page Mockup Iteration 3.jpg" alt="Step 5" class="preview-image" data-full="../../images/Landing Page Mockup Iteration 3.jpg">
+                                <img src="../../images/Services Mockup Iteration 3.jpg" alt="Step 5" class="preview-image" data-full="../../images/Services Mockup Iteration 3.jpg">
                             </div>
                             <p class="carousel-text">Step #9: Flat Colour Iteration</p>
                         </div>
                         <div class="carousel-item">
                             <div class="carousel-image-container">
-                                <img src="../../images/Landing Page Mockup Iteration 4.jpg" alt="Step 6"
-                                    class="preview-image" data-full="../../images/Landing Page Mockup Iteration 4.jpg">
-                                <img src="../../images/Services Mockup Iteration 4.jpg" alt="Step 6"
-                                    class="preview-image" data-full="../../images/Services Mockup Iteration 4.jpg">
-                                <img src="../../images/Partners Mockup.jpg" alt="Step 6" class="preview-image"
-                                    data-full="../../images/Partners Mockup.jpg">
+                                <img src="../../images/Landing Page Mockup Iteration 4.jpg" alt="Step 6" class="preview-image" data-full="../../images/Landing Page Mockup Iteration 4.jpg">
+                                <img src="../../images/Services Mockup Iteration 4.jpg" alt="Step 6" class="preview-image" data-full="../../images/Services Mockup Iteration 4.jpg">
+                                <img src="../../images/Partners Mockup.jpg" alt="Step 6" class="preview-image" data-full="../../images/Partners Mockup.jpg">
                             </div>
                             <p class="carousel-text">Step #10: Final Review and Testing</p>
                         </div>
@@ -383,7 +368,6 @@
                     <button class="carousel-control next" onclick="nextSlide('carousel4')">&#10095;</button>
                 </div>
             </div>
-            <!-- Lightbox container -->
             <div class="lightbox" id="lightbox">
                 <img id="lightbox-img" src="" alt="Full Size">
             </div>
