--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h2>SprintX: Pokemon Archive</h2>
             <div class="underline"></div>
             <p>One of my recent projects as a Front End Developer was creating an application called: Pokémon Archive, a platform designed to catalog and explore information about Pokémon cards. This project focused on creating an intuitive interface using React.js and integrating APIs to fetch and display Pokémon data dynamically.</p>
-            <a href="https://github.com/JonasWesselius/PokemonArchive" class="application-btn" target="_blank">Go to App</a>
+            <a href="https://gitfront.io/r/JonasWesselius/JACGJJEKhsqt/PokemonArchive/" class="application-btn" target="_blank">Go to App</a>
         </div>
     </section>
 
