--- a/learningOutcomes/frontEndDevelopment/frontEnd.html
+++ b/learningOutcomes/frontEndDevelopment/frontEnd.html
@@ -200,7 +200,7 @@
             <div class="lightbox" id="lightbox">
                 <img id="lightbox-img" src="" alt="Full Size">
             </div>
-            <a href="https://github.com/JonasWesselius/PokemonArchive" class="further-btn" target="_blank">Go To Repo</a>
+            <a href="https://gitfront.io/r/JonasWesselius/JACGJJEKhsqt/PokemonArchive/" class="further-btn" target="_blank">Go To Repo</a>
         </div>
     </div>
     <div class="sectionParent">
