--- a/learningOutcomes/iterativeDesign/iterative.html
+++ b/learningOutcomes/iterativeDesign/iterative.html
@@ -68,18 +68,18 @@
             <div class="further-detail">
                 <h2>Wireframes Lighttown</h2>
                 <div class="underline"></div>
-                <p>Lighttown Speakers, a club under the Toastmasters brand, needed a new website to improve their online presence and attract more members. The project aimed to create a user-friendly and engaging website. The design process required multiple iterations to refine the wireframe based on user feedback and testing.</p>
-                <p>My task was to develop a wireframe for the Lighttown Speakers website, emphasizing an iterative design approach. This involved creating initial designs, gathering feedback, making necessary adjustments, and repeating the process to enhance the final product. The goal was to ensure the website met user needs and provided an optimal user experience.</p>
-                <p>1. Initial Wireframe Creation: Developed the first version of the wireframe, outlining the basic structure and layout of the website. This included main sections such as the Landing Page, About Us, Partners, and Contact Us.</p>
-                <p>2. User Feedback and Testing: Conducted usability testing sessions with teachers to gather feedback on the initial wireframe regarding navigation, layout, and overall user experience.</p>
-                <p>3. Feedback Analysis: Analysed the feedback to identify common issues and areas for improvement. Teachers suggested that since target audience reach was a major goal for the website, we should consider SEO methods. This led to discarding the one-page design, which is generally poor for SEO.</p>
-                <p>4. Mock-up 1: Updated the wireframe based on the feedback. This included reorganizing the website structure, halting the development of the mobile version for a while, enhancing the visibility of important sections like upcoming events and partnership information, and moving on to creating a mock-up using the Toastmasters brand guide.</p>
-                <p>5. Second Round of Feedback: Conducted another round of feedback with teachers, focusing on the styling and colouring of the mock-up.</p>
-                <p>6. Feedback Incorporation: Reviewed the second round of feedback. Key changes included establishing a consistent call-to-action colour, which became yellow, decreasing the brightness of images for better text readability, and updating the footer to be more user-friendly.</p>
-                <p>7. Iteration 2: Implemented these changes to the mock-up, resulting in a more appealing website but recognizing that more work was needed.</p>
-                <p>8. Third Round of Feedback: Teachers suggested several changes, including revising the main colours. The yellow felt out of place, so I went for a colour scheme aligned with the Toastmasters website, mainly grey and blue. Red was used for call-to-action elements, gradients were made more subtle, and distracting diagonal images were removed from the services page.</p>
-                <p>9. Flat Colour Iteration: Some teachers suggested using flat colours instead of gradients, so I created an iteration with flat colours to evaluate this option.</p>
-                <p>10. Final Review and Testing: Presented all iterations to the teachers. The final feedback was to use different shades of the colour scheme to reduce vibrancy. By adding white with varying opacities, I achieved a range of blue shades, creating the final version. Additionally, a Partners page was added to fulfill the website's needs.</p>
+                <p>Lighttown Speakers, a Toastmasters club, required a new website to boost its online presence and recruit new members. The project's goal was to design a website that was both easy to use and engaging. Multiple iterations were necessary to refine the wireframe in response to user feedback and testing. </p>
+                <p>My job was to create a wireframe for the Lighttown Speakers website, focusing on an iterative design approach. This meant creating basic designs, asking feedback, making required changes, and repeating the process to improve the finished product. The goal was to make sure the website addressed the needs of the users and gave them the best possible experience. </p>
+                <p>1. Initial Wireframe Creation: Created the initial iteration of the wireframe, which outlined the basic structure and layout of the website. This covered major elements including the landing page, about us, partners, and contact us. </p>
+                <p>2. User Feedback and Testing: Held usability testing sessions with teachers to collect feedback on the initial wireframe's navigation, layout, and overall user experience. </p>
+                <p>3. feedback Analysis: I analyzed the feedback to discover common issues and opportunities for improvement. Teachers advised that we examine SEO methods because reaching our target audience was an essential objective for the website. This led to the elimination of the one-page design, which is often bad for SEO. </p>
+                <p>4. Mock-up 1: Updated the wireframe based on feedback. This involved rearranging the website structure, putting off development of the mobile version, increasing the importance of crucial elements such as upcoming events and partnership information, and designing a mock-up based on the Toastmasters brand guide. </p>
+                <p>5. Second Round of Feedback: Provided further feedback of teachers, concentrating on the mock-up's styling and colouring. </p>
+                <p>6. feedback Incorporation: We reviewed the second batch of feedback. The key adjustments included developing a consistent call-to-action colour, which became yellow, lowering the brightness of images for better text readability, and updating the footer to make it more user-friendly. </p>
+                <p>7. Iteration 2: Made these previously mentioned improvements to the mock-up, resulting in a more appealing website while acknowledging that more work was required. </p>
+                <p>8. Third Round of Feedback: Teachers suggested various adjustments, including changing the primary colors. The yellow felt out of place, so I chose a colour scheme based on the Toastmasters website, primarily grey and blue. Red was used for call-to-action components, gradients were toned down, and distracting diagonal images were removed from the services page. </p>
+                <p>9. Flat Colour Iteration: Some lecturers suggested using flat colours instead of gradients, so I designed an iteration with flat colours to test this idea. </p>
+                <p>10. Final Review and Testing: Showed all iterations to the teachers. The final recommendation was to utilize different tones of the color scheme to lessen brightness. I created the final version by adding white with varied opacities, resulting in a variety of blue colors. In addition, a Partners page was created to meet the website's objectives. </p>
             </div>
             <div class="carousel-container" id="carousel1">
                 <h3>Project Steps</h3>
@@ -144,16 +144,8 @@
                 <img id="lightbox-img" src="" alt="Full Size">
             </div>
             <div class="further-detail">
-                <p>The iterative design process resulted in a coherent, user-friendly, and visually appealing mock-up
-                    for the Lighttown Speakers website. Each iteration incorporated valuable feedback, leading to a
-                    final design that met user needs and preferences. The final wireframe provided a solid starting
-                    point for the website development.</p>
-                <p>This project highlighted the importance of an iterative design approach in web design. Iterative
-                    testing and feedback allowed for continuous improvements and ensured that the final product closely
-                    aligned with user expectations. I learned that flexibility and responsiveness to feedback are
-                    crucial in design. By asking a multitude of teachers and listening to their different point of views
-                    and continuously refining the wireframe, I was able to create a more effective and appealing
-                    website. In future projects, I will prioritize iterative design to ensure high-quality outcomes.</p>
+                <p>The iterative design process produced a logical, user-friendly, and visually appealing mock-up of the Lighttown Speakers website. Each iteration integrated useful feedback, resulting in a final design that addressed user needs and preferences. The finished wireframe offered a good foundation for website development. </p>
+                <p>This project demonstrated the value of an iterative design method in webdesign. Iterative testing and feedback enabled continuous improvement while ensuring that the final product closely matched customer expectations. I discovered that flexibility and response to feedback are key in design. I was able to design a more effective and appealing website by questioning a large number of instructors, listening to their various points of view, and constantly refining the wireframe. In future projects, I will emphasis iterative design to achieve high-quality results. </p>
             </div>
             <a href="https://www.figma.com/design/kjzxTmYHqaQdI0vMxq09q3/Wireframes-Lighttown-Speakers?node-id=111-88&t=O26DBeetCFWv2fyQ-1"
                 class="further-btn" target="_blank">To Design</a>
@@ -165,27 +157,15 @@
             <div class="further-detail">
                 <h2>Wireframes Portfolio</h2>
                 <div class="underline"></div>
-                <p>Throughout the creation of my portfolio, I adopted an iterative design approach, focusing on refining
-                    visual appeal and usability through multiple feedback cycles. Here’s how I navigated through the
-                    process:</p>
-                <p>1. Initial Conceptualization and Wireframing: I started by outlining the basic structure and content
-                    flow of my portfolio. This foundational stage set the direction for subsequent iterations.</p>
-                <p>2. First Iteration: Gathering feedback from teachers on the initial wireframe provided valuable
-                    insights. It highlighted the need to refine my color palette and ensure consistency throughout the
-                    design.</p>
-                <p>3. Second Iteration: Incorporating feedback, I adjusted the color palette and created a moodboard to
-                    better align with the portfolio's theme. I also expanded on content to enhance completeness.</p>
-                <p>4. Third Iteration: Further feedback led me to refine the layout, particularly focusing on the design
-                    of learning outcomes hexagons and adjusting spacing across pages for better coherence and visual
-                    harmony.</p>
+                <p>Throughout developing of my portfolio, I used an iterative design approach, refining visual appeal and usability through many feedback cycles. Here's how I got through the process:</p>
+                <p>1. Initial Conceptualization and Wireframing: I began by designing the fundamental structure and content flow of my portfolio. This foundational stage established the direction for following iterations.</p>
+                <p>2. First Iteration: Getting feedback from teachers on the initial wireframe yielded useful ideas. It highlighted the need of adjusting my color palette and maintaining consistency throughout the design.</p>
+                <p>3. Second Iteration: After receiving feedback, I changed the color palette and built a moodboard to better match the portfolio's theme. I also showed more of the future content.</p>
+                <p>4. Third Iteration: Based on further feedback, I improved the layout, focusing on the design of learning outcomes hexagons and altering spacing across pages to improve coherence and visual harmony.</p>
                 <p>Key Learnings:</p>
-                <p>Iterative Approach: Embracing iterative design allowed me to continuously refine and enhance my
-                    portfolio, ensuring it met high standards of usability and visual appeal.</p>
-                <p>Importance of Planning: Regular feedback from teachers underscored the significance of thorough
-                    planning in achieving a polished final product. It emphasized the balance between content richness
-                    and visual presentation.</p>
-                <p>My journey in creating this portfolio highlights the critical role of iterative design and responsive
-                    feedback in achieving a professional and visually cohesive outcome.</p>
+                <p>Iterative Approach: By embracing iterative design, I was able to continuously modify and improve my portfolio, ensuring that it met high usability and visual appeal requirements.</p>
+                <p>Importance of Planning: Regular feedback from teachers highlighted the importance of thorough preparation in producing a polished end product. It underlined the importance of finding a balance between significant content and aesthetically pleasing presentation.</p>
+                <p>My path towards developing this portfolio shows the importance of iterative design and feedback in producing a professional and visually coherent result.</p>
             </div>
             <div class="carousel-container" id="carousel2">
                 <h3>Project Steps</h3>
@@ -251,21 +231,11 @@
             <div class="further-detail">
                 <h2>Wireframes SprintX</h2>
                 <div class="underline"></div>
-                <p>I started my SprintX project with the goal of creating an online archive for Pokemon card
-                    collections, focusing on designing an intuitive and visually engaging interface.</p>
-                <p>- Initial Wireframe: I explored initial design concepts inspired by the physical binder metaphor,
-                    aiming to recreate the tactile experience of navigating a card collection.</p>
-                <p>- Iteration 1: Based on feedback, I shifted towards a book metaphor, developing an interactive
-                    interface where users could flip through virtual pages to view their card collection. This iteration
-                    aimed to enhance user interaction and navigation.</p>
-                <p>- Final Mock-up: I refined the design into a mockup featuring a lighter theme, vibrant colors, and
-                    animations that simulate zooming into the collection, aiming to create a more immersive user
-                    experience.</p>
-                <p>Throughout the SprintX project, I learned the importance of iterative design in refining user
-                    interfaces. Each iteration allowed me to gather feedback, pivot when necessary, and ultimately
-                    deliver a more user-friendly and visually appealing product. The transition from initial wireframes
-                    to the final mockup highlighted the evolution in design thinking and the iterative process's role in
-                    shaping a cohesive and engaging user experience.</p>
+                <p>I began my SprintX project with the intention of building a digital archive for Pokemon card collections, with an emphasis on making an easy and visually appealing interface.</p>
+                <p>- Initial Wireframe: I experimented with design possibilities inspired by the physical binder metaphor, hoping to mimic the tactile feel of browsing a card collection.</p>
+                <p>- Iteration 1: Based on feedback, I adopted a book metaphor and created an interactive interface in which users could flip through virtual pages to explore their card collection. This iteration attempted to improve user interactions and navigation.</p>
+                <p>- Final Mock-up: I modified the design to include a lighter theme, vibrant colors, and animations that resemble zooming into the collection, with the goal of creating a more immersive user experience.</p>
+                <p>I became aware of the value of iterative design throughout the SprintX project as a means of improving user interfaces. With every version, I was able to get input, make adjustments as needed, and finally produce a product that was easier to use and more aesthetically pleasing. The progression of iterative designing and the process in creating an enjoyable and interesting user experience were demonstrated by the change from the first wireframes to the final prototype. </p>
             </div>
             <div class="carousel-container" id="carousel3">
                 <h3>Project Steps</h3>
